# GoldManager

./: .env.example  .gitignore  00_FINAL_PLAN.md  01_orchestrator.md  02_data_layer_mt5_bridge.md  03_feature_engine.md  04_decision_scoring.md  05_execution_risk.md  06_journal_backtest_review.md  07_devops_docker_viz.md  AGENTS.md  README.md  decision_agent.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.mt5.yml  docker-compose.prod.yml  news_context_agent.md  pyproject.toml  review_agent.md
data/real/: xauusd_m1_real.parquet
data/sample/: _short_phd.parquet  xauusd_m1_sample.parquet
docker/mt5-terminal/: Dockerfile  mt5_bridge_server.py  supervisord.conf
docker/mt5-terminal/custom-cont-init.d/: 50-mt5-bridge-supervisor
docker/service/: Dockerfile
docker/service-mt5/: Dockerfile
docs/: DEPLOY.md  OPERATIONS.md  SECURITY.md
graphify-out/: .gitignore  GRAPH_REPORT.md  graph.html  manifest.json
mql5/: BotOverlay.mq5
scripts/: account_drift_watch.sh  deploy.sh  mt5_bridge_up.sh
src/xauusd_bot/: __init__.py  data_collector.py  decision_engine.py  docker_entrypoint.py  execution_engine.py  feature_engine.py  healthcheck.py  journal_writer.py
src/xauusd_bot/backtest/: __init__.py  engine.py  exit_replay.py  models.py  walkforward.py
src/xauusd_bot/cli/: __init__.py  ai_smoke.py  backtest_smoke.py  daily_review_smoke.py  decision_smoke.py  execution_smoke.py  exit_sweep.py  feature_smoke.py  fitting_proposal_smoke.py  journal_smoke.py  replay_smoke.py  streams_smoke.py  weekly_review_smoke.py
src/xauusd_bot/common/: __init__.py  notify.py  runtime_config.py  service.py  webpush.py
src/xauusd_bot/common/config/: __init__.py  settings.py
src/xauusd_bot/common/logging/: __init__.py  setup.py
src/xauusd_bot/common/messaging/: __init__.py  compact.py  events.py  streams.py
src/xauusd_bot/common/schemas/: __init__.py  ai_decision.py  backtest.py  decision.py  events.py  execution.py  features.py  journal.py  review.py
src/xauusd_bot/connectors/: __init__.py  base.py  factory.py  live.py  mt5linux_connector.py  paper_broker.py  replay.py  safety.py  schemas.py  symbol_spec.py
src/xauusd_bot/dashboard/: api.py  app.py  auth.py  cf_access.py  redis_subscriber.py  websocket.py
src/xauusd_bot/dashboard/static/: dashboard.js  index.html
src/xauusd_bot/dashboard/static/m/: index.html  manifest.webmanifest  mobile.js  sw.js
src/xauusd_bot/data/: __init__.py  ohlc_builder.py  quality_monitor.py  spread_monitor.py  symbol_spec_loader.py
src/xauusd_bot/decision/: __init__.py  _weights.py  aggregator.py  ai_layer.py  ai_orchestrator.py  openrouter_client.py  pipeline.py  qualification.py  rule_fallback.py  scoring.py  trading_hours.py
src/xauusd_bot/execution/: __init__.py  emergency.py  entry_gate.py  orders.py  pending.py  pipeline.py  position_manager.py  risk.py  sizer.py  stops.py  take_profit.py  zone_lock.py
src/xauusd_bot/features/: __init__.py  _indicators.py  fib.py  fvg.py  liquidity.py  momentum.py  news.py  pipeline.py  session.py  structure.py  volume_range.py  volume_trend.py  vwap.py
src/xauusd_bot/journal/: __init__.py  queries.py  store.py
src/xauusd_bot/review/: __init__.py  backtest_spec_parser.py  engine.py  fitting_proposal.py  reviewer_client.py
src/xauusd_bot/viz/: __init__.py  bot_overlay_simulator.py  overlay_writer.py
tests/: _execution_factories.py  conftest.py  test_common.py  test_data_layer.py  test_safety.py  test_schemas.py
tests/backtest/: test_engine.py  test_entry_defer.py  test_exit_replay.py  test_flush_lookahead.py  test_invariants.py  test_models.py  test_phase_d_exits.py  test_schemas.py  test_smoke.py  test_walkforward.py
tests/common/: test_notify.py  test_schemas.py  test_settings.py  test_webpush.py
tests/connectors/: test_end_time_hardening_regression.py  test_live_connector.py  test_live_stub.py  test_mt5linux_connector.py  test_paper_broker.py  test_replay.py  test_safety.py  test_schema_parity.py  test_symbol_spec.py
tests/dashboard/: test_api.py  test_auth.py  test_cf_access.py  test_frontend_structure.py  test_i_audit.py  test_websocket.py
tests/data/: test_ohlc_builder.py  test_quality_monitor.py  test_spread_monitor.py
tests/decision/: conftest.py  test_aggregator.py  test_ai_layer.py  test_ai_orchestrator.py  test_ai_schemas.py  test_decision_log.py  test_decision_schemas.py  test_i4_audit.py  test_openrouter_client.py  test_pipeline.py  test_qualification.py  test_rule_fallback.py  test_scoring.py  test_trading_hours.py
tests/docker/: test_mt5_terminal_dockerfile.py
tests/execution/: conftest.py  test_broker_backstop_tp.py  test_close_journaling.py  test_emergency.py  test_entry_gate.py  test_invariants.py  test_orders.py  test_pending.py  test_phase_c_ai_intent.py  test_position_management_loop.py  test_position_manager.py  test_risk.py  test_sizer.py  test_smoke_lifecycle.py  test_stops.py  test_take_profit.py  test_zone_lock.py
tests/features/: test_fib.py  test_fvg.py  test_liquidity.py  test_momentum.py  test_news.py  test_pipeline_structure.py  test_session.py  test_structure.py  test_volume_range.py  test_volume_trend.py  test_vwap.py
tests/integration/: test_end_to_end_replay.py  test_feature_smoke.py  test_smoke_cli.py
tests/journal/: test_invariants.py  test_journal_writer_close.py  test_pit_contract.py  test_queries.py  test_schemas.py  test_smoke.py  test_store.py
tests/review/: test_backtest_spec_parser.py  test_fitting_proposal.py  test_i_audit.py  test_review_engine.py  test_review_schemas.py  test_reviewer_client.py
tests/services/: test_bundle_compaction.py  test_feature_engine_clock_offset.py  test_service_runtime.py  test_stream_pipeline.py
tests/viz/: test_bot_overlay_logic.py  test_overlay_writer.py
tools/: check_mql5_syntax.py  generate_sample_data.py  run_simulator_against_smoke.py
